--- a/src/BUILD.bazel
+++ b/src/BUILD.bazel
@@ -5,7 +5,6 @@ cc_library(
     copts = ["-std=c++17"],
 )
 
-
 cc_library(
     name = "path",
     srcs = ["path.cc"],
@@ -15,15 +14,20 @@ cc_library(
     deps = [":strings"],
 )
 
-
 cc_test(
     name = "path_test",
     srcs = ["path_test.cc"],
+    copts = [
+        "-std=c++17",
+        "-stdlib=libc++",
+    ],
+    linkopts = [
+        "-stdlib=libc++",
+        "-lc++",
+    ],
     deps = [
         ":path",
         "@com_google_googletest//:gtest",
         "@com_google_googletest//:gtest_main",
     ],
-    copts = ["-std=c++17", "-stdlib=libc++"],
-    linkopts = ["-stdlib=libc++", "-lc++"],
 )
